--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <!--Bootstrap Script-->
         <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <!--Custom Script-->
-        <script src="./js/basic.js"></script>
+        <script src="./js/main.js"></script>
         
     </body>
 </html>
